Update JS to prevent issues on mobile realting to buttons and nav toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,13 +330,14 @@ font-weight: bold;
 
 /* Fix quiz buttons from remaining selected on mobile */
 
-#answers .category-button:focus,
-#answers .category-button:active,
-#answers .answer-button:focus-visible {
+.answer-button:focus,
+.answer-button:active,
+.answer-button:focus-visible {
     outline: none !important;
     box-shadow: none !important;
     transform: none !important;
-    background-color: #1A252F;
+    background-color: #1A252F !important;
+    touch-action: manipulation;
 }
 
 button, 
@@ -434,13 +435,23 @@ ul.nav-links {
 }
 
 .menu-toggle span {
-  background-color: #1A252F;
+  background-color:  #ECF0F1;
   display: block;
   width: 100%;
   height: 5px;
   border-radius: 2px;
   transition: all 0.3s ease; 
   margin: 2px 0; 
+}
+
+/* Added to fix issue relalting to menu button on mobile - stays transparent */
+.menu-toggle,
+.menu-toggle:hover,
+.menu-toggle:active,
+.menu-toggle:focus {
+  background: transparent !important;
+  box-shadow: none !important;
+  outline: none !important;
 }
 
 /*Media Queries */
